Fix styles on smaller screens
Issue: PLPS-109

--- a/src/resources/css/packlink-wp-override.css
+++ b/src/resources/css/packlink-wp-override.css
@@ -11,5 +11,6 @@
 }
 
 #wpbody-content {
+    padding-bottom: 0;
     height: 100%;
 }
